# rss-mcp

./: .dockerignore  .gitignore  Containerfile  FASTMCP_REFACTORING_SUMMARY.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
examples/: docker_multiuser.md  http_sse_usage.py
src/rss_mcp/: __init__.py  __main__.py  cache_storage.py  cli.py  config.py  fastmcp_multiuser.py  fastmcp_multiuser_v2.py  fastmcp_server.py  feed_manager.py  models.py  server.py  storage.py  user_rss_manager.py  utils.py
tests/: __init__.py  conftest.py  test_basic_validation.py  test_cli.py  test_config.py  test_entry_accumulation.py  test_fastmcp_client.py  test_fastmcp_integration.py  test_feed_manager.py  test_http_routes.py  test_http_sse_headers.py  test_integration.py  test_models.py  test_multiuser.py  test_multiuser_fastmcp.py  test_multiuser_http.py  test_real_rss_data.py  test_rss_server.py  test_server.py  test_storage.py  test_user_info_endpoint.py
tests/fixtures/: caixin_test_data.xml  test_config.json
tests/fixtures/rss_data/: solidot.xml  zaobao.xml
tests/integration/: __init__.py  conftest.py  mock_rss_server.py  test_cli_integration.py  test_environment.py  test_mcp_native_http.py  test_mcp_native_simple.py  test_mcp_native_stdio.py  utils.py
