[project]
name = "rss-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for RSS feed management with multi-source support and intelligent caching"
readme = "README.md"
license = {text = "BSD-2-Clause"}
authors = [
    { name = "xz-dev", email = "xiangzhedev@gmail.com" }
]
maintainers = [
    { name = "xz-dev", email = "xiangzhedev@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["mcp", "rss", "feed", "aggregator", "model-context-protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Text Processing :: Markup :: XML",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastmcp>=0.2.0",
    "feedparser>=6.0.11",
    "aiohttp>=3.9.0",
    "click>=8.1.7",
    "python-dateutil>=2.8.2",
    "uvicorn>=0.27.0",
    "fastapi>=0.108.0",
    "pydantic>=2.5.0",
    "watchdog>=3.0.0",
    "platformdirs>=4.4.0",
    "sse-starlette>=3.0.2",
]

[project.urls]
"Homepage" = "https://github.com/xz-dev/rss-mcp"
"Bug Tracker" = "https://github.com/xz-dev/rss-mcp/issues"
"Documentation" = "https://github.com/xz-dev/rss-mcp#readme"
"Source Code" = "https://github.com/xz-dev/rss-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.24.0",
]

[project.scripts]
rss-mcp = "rss_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rss_mcp" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (may be skipped)",
    "network: marks tests as requiring network access",
    "env_check: marks tests for environment validation",
]
filterwarnings = [
    "ignore::DeprecationWarning:feedparser.*",
]

[tool.coverage.run]
source = ["src/rss_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "tests",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]
